Fix for image getting stretched on narrow screen

--- a/imaginegallery/imagine/static/css/imaginedark.css
+++ b/imaginegallery/imagine/static/css/imaginedark.css
@@ -46,7 +46,7 @@ a
 #content .image_normal
 {
     max-width: 100%;
-    height: 80vh;
+    max-height: 80vh;
 }
 
 #imagelarge
